fix:尝试一下背景图片加载优化

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: compress
 <head>
     {% include head.html %}
 </head>
-<body>
+<body style="background:url(/assets/img/placeholder-new.jpeg);background-repeat: no-repeat;background-size: cover;">
     {% include nav.html %}
     <!-- Header -->
     <header class="header flex" role="banner">
