--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: compress
 <head>
     {% include head.html %}
 </head>
-<body style="background:url(../assets/img/placeholder-new.jpeg) no-repeat;background-size: cover;">
+<body style="background:url(/nines/assets/img/placeholder-new.jpeg) no-repeat;background-size: cover;">
     {% include nav.html %}
     <!-- Header -->
     <header class="header flex" role="banner">
