fix:删除字体，提高加载速度

--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -103,7 +103,8 @@
 			position: absolute;
 			top: 0;
 			line-height: 40px;
-			font-family: 'fontawesome';
+			// font-family: 'fontawesome';
+			font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", "Segoe UI", "Microsoft Yahei", Tahoma, Arial, STHeiti, sans-serif;
 			color: $white;
 			speak: none;
 			-webkit-font-smoothing: antialiased;
