--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -4,7 +4,8 @@ pre.highlight {
 
 .highlight {
 	background-color: #49483e;
-	font-family: $font2;
+	// font-family: $font2;
+	font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", "Segoe UI", "Microsoft Yahei", Tahoma, Arial, STHeiti, sans-serif;
 	@include font-size(14);
 	color: #f8f8f2;
 	border-radius: 4px;
