--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -111,7 +111,8 @@ a {
 // pre and code
 pre,
 code {
-    font-family: $font2;
+    // font-family: $font2;
+    font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", "Segoe UI", "Microsoft Yahei", Tahoma, Arial, STHeiti, sans-serif;
     overflow-x: auto;
 }
 
