--- a/_sass/normalize.scss
+++ b/_sass/normalize.scss
@@ -132,7 +132,8 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace;
+  // font-family: monospace, monospace;
+  font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", "Segoe UI", "Microsoft Yahei", Tahoma, Arial, STHeiti, sans-serif;
   font-size: 1em;
 }
 
