--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -13,7 +13,8 @@ html {
 }
 body {
 	@extend %extend1;
-	font-family: $font1;
+	// font-family: $font1;
+    font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", "Segoe UI", "Microsoft Yahei", Tahoma, Arial, STHeiti, sans-serif; 
 	@include font-rem($doc-font-size);
 	color: $color_tuatara;
 	background-color: $bodycolor;
