--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,8 +20,8 @@ sitemap: false
 @import "elements";
 @import "syntax";
 @import "nav";
-@import "vendor/fonts";
-@import "vendor/font-awesome";
+// @import "vendor/fonts";
+// @import "vendor/font-awesome";
 @import "vendor/animate";
 @import "vendor/magnific-popup/magnific-popup";
 @import "print"
